2007-09-05  Marvin Decker  <marv.decker@gmail.com>

Reviewed by Darin.

        Fix a divide by 0 in the progress tracker.
        http://bugs.webkit.org/show_bug.cgi?id=15055

        * loader/ProgressTracker.cpp:
        (WebCore::ProgressTracker::incrementProgress):



Canonical link: https://commits.webkit.org/22476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28593 268f45cc-cd09-0410-ab3c-d52691b4dbfc